04 Apr 2001 #define MAX_DEVICE_THREAD_IDLE_SECS 300
02 Apr 2001 Fixed device_thread race condition in channel.c
02 Apr 2001 Added support for [Windows] External GUI
28 Mar 2001 Fix nullification problem in form_stack_entry - Jan Jaeger
27 Mar 2001 Fix exception access id in BSG - Jan Jaeger
27 Mar 2001 Fix exception access id during subspace replacement - Jan Jaeger
27 Mar 2001 Fix translation exception address in ESAME mode - Jan Jaeger
27 Mar 2001 Correction to ckd2cckd for small ckd files - Greg Smith
25 Mar 2001 Correction to LPQ/STPQ - Jan Jaeger
25 Mar 2001 Correction to MVCK/MVCP/MVCS - Jan Jaeger
25 Mar 2001 Dynamic device threads - Jan Jaeger
23 Mar 2001 Set `unit check' status when EOF CKD record read
            even if count field is zero - Greg Smith 
23 Mar 2001 Bypass number of cylinder check in cckdcdsk.c - Greg Smith
22 Mar 2001 Implement XSTORE in ESAME mode - Jan Jaeger
22 Mar 2001 Implement fast interrupt processing for MCK and PER - Jan Jaeger
22 Mar 2001 Correct interruption identification word - Jan Jaeger
22 Mar 2001 Correct interrupt mask setting in LCTL/LTCLG - Jan Jaeger
22 Mar 2001 Correct SSM/STOSM spec exc in ESAME mode - Jan Jaeger
21 Mar 2001 Correct cache invalidation in PR - Greg Smith
20 Mar 2001 Correction to 64 bit SIGP initial_cpu_reset - Jan Jaeger
18 Mar 2001 Correction to stack types in ESAME mode - Jan Jaeger
18 Mar 2001 Correct LRA/LRAG segment table entry address on cc 3 - Jan Jaeger
18 Mar 2001 Correct address types in move char instructions - Jan Jaeger
18 Mar 2001 Correct subspace_replace address type - Jan Jaeger
16 Mar 2001 Fix to allow HET files to reside on read-only media - Leland Lucius
16 Mar 2001 Fix LPSW in ESAME mode - Jan Jaeger
15 Mar 2001 Compressed CKD utilities now tolerate VM weirdness - Greg Smith
15 Mar 2001 Alternate tracks for compressed CKD volumes - Greg Smith
15 Mar 2001 Utilities display versioning and copyright info - Greg Smith