@@ -44,6 +44,7 @@
 #undef DEF_INST
 #undef ARCH_DEP
 #undef PSA
+#undef PSA_SIZE
 #undef IA
 #undef PX
 #undef CR
@@ -124,6 +125,7 @@ s370_ ## _name
 #define SSGROUP_BIT	STD_GROUP
 
 #define PSA	PSA_3XX
+#define PSA_SIZE 4096
 #define IA	IA_L
 #define PX	PX_L
 #define CR(_r)	CR_L(_r)
@@ -203,6 +205,7 @@ s390_ ## _name
 #define LSED_UET_PC	S_LSED_UET_PC
 
 #define PSA	PSA_3XX
+#define PSA_SIZE 4096
 #define IA	IA_L
 #define PX	PX_L
 #define CR(_r)	CR_L(_r)
@@ -282,6 +285,7 @@ ATTR_REGPARM(3) void z900_ ## _name (BYTE inst[], int execflag, REGS *regs)
 z900_ ## _name
 
 #define PSA	PSA_900
+#define PSA_SIZE 8192
 #define IA	IA_G
 #define PX	PX_L
 #define CR(_r)	CR_G(_r)
