@@ -1,6 +1,9 @@
+04 Apr 2001 Sense/Set Path Group ID for DASD - Jan Jaeger
+02 Apr 2001 Correction to register unstacking logic - Jan Jaeger
 04 Apr 2001 #define MAX_DEVICE_THREAD_IDLE_SECS 300
 02 Apr 2001 Fixed device_thread race condition in channel.c
 02 Apr 2001 Added support for [Windows] External GUI
+01 Apr 2001 Correction to Lock Page - Jan Jaeger
 28 Mar 2001 Fix nullification problem in form_stack_entry - Jan Jaeger
 27 Mar 2001 Fix exception access id in BSG - Jan Jaeger
 27 Mar 2001 Fix exception access id during subspace replacement - Jan Jaeger
